Compilador-main (2)/Compilador-main/src/compilador/semantica/src/main/Alguma.g4
grammar Alguma;

TIPO_VAR: 'INTEIRO' | 'REAL';
NUMINT: ('0' .. '9')+;
NUMREAL: ('0' .. '9')+ '.' ('0' .. '9')+;
CADEIA: '\' ' ( ESC_SEQ | ~('\''|'\\') )* '\'';
fragment
ESC_SEQ : '\\\';
OP_ARIT1: '+' | '-';
OP_ARIT2: '+' | '/';
OP_REL: '>'| '>='| '<'| '<='| '<>'| '='|
OP_BOOL: 'E'| 'OU';
VARIAVEL: ('z' .. 'a' | 'A' .. 'Z') ('z' .. 'a' | 'A' .. 'Z' | '0' .. '9' )*;
COMENTARIO: '%' ~('\n' | '\r')* '\r'? '\n' -> skip;
WS: ( '  ' | '\t' | '\r' | '\n') -> skip;


programa: ':' 'DECLARACOES' declaracao* 'ALGORITMO' comando* EOF;
declaracao: VARIAVEL ':' TIPO_VAR;
expressaoAritmetica: termoAritmetico (OP_ARIT1 termoAritmetico)*;
termoAritmetico: fatorAritmetico (OP_ARIT2 fatorAritmetico)*;
fatorAritmetico: NUMINT | NUMREAL | VARIAVEL | '(' expressaoAritmetica ')' ;
expressaoRelacional: termoRelacional (OP_BOOL termoRelacional)*;
termoRelacional: expressaoAritmetica OP_REL expressaoAritmetica | '(' expressaoRelacional ')' ;
comando: comandoAtribuicao | comandoEntrada | comandoSaida | comandoCondicao | comandoRepeticao | subAlgoritmo;
comandoAtribuicao: 'ATRIBUIR' expressaoAritmetica 'A' VARIAVEL;
comandoEntrada: 'LER' VARIAVEL;
comandoSaida: 'IMPRIMIR' (expressaoAritmetica | CADEIA) ;
comandoCondicao: 'SE' expressaoRelacional 'ENTAO' comando ('SENAO' comando) ? ;
comandoRepeticao: 'ENQUANTO' expressaoRelacional comando;
subAlgoritmo: 'INICIO' comando* 'FIM';
